--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "Frontend for Re-chat application",
   "type": "module",
   "scripts": {
-    "build": "mkdir -p dist && tsc && cp src/index.html dist/ && cp src/index.css dist/ && cp dist/connectWS.js dist/",
+    "build": "mkdir -p dist && tsc && cp src/index.html dist/ && cp src/index.css dist/",
     "start": "http-server dist",
     "dev": "npm run build && npm start"
   },
