--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,9 @@
     "start": "http-server dist",
     "dev": "npm run build && npm start"
   },
-  "dependencies": {},
   "devDependencies": {
+    "@types/node": "^20.5.9",
     "http-server": "^14.1.1",
-    "typescript": "^5.2.2",
-    "@types/node": "^20.5.9"
+    "typescript": "^5.2.2"
   }
 }
