--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
   "devDependencies": {
-    "concurrently": "^8.2.1"
+    "concurrently": "^8.2.1",
+    "typescript": "^5.9.2"
   }
 }
