--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "concurrently": "^8.2.1",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "amqplib": "^0.10.9"
   }
 }
